--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
 <body>
     <h1 class="header">Calculator Project</h1>
     <div class="calculator">
-        <section class="output-section">
-            <p class="output-field">0</p>
-        </section>
-        <section class="keypad">
-            <section class="row row-1">
+        <div class="output-section">
+            <p id="output-field">0</p>
+        </div>
+        <div class="keypad-section">
+            <div class="row">
                 <button class="button action-button clear-btn">C</button>
-                <button class="button action-button back-btn">←</button>
-                <button class="button operator-button divide-btn">÷</button>
-            </section>
-            <section class="row row-2">
-                <button class="button number-button seven-btn">7</button>
-                <button class="button number-button eight-btn">8</button>
-                <button class="button number-button nine-btn">9</button>
-                <button class="button operator-button multiply-btn">×</button>
-            </section>
-            <section class="row row-3">
-                <button class="button number-button four-btn">4</button>
-                <button class="button number-button five-btn">5</button>
-                <button class="button number-button six-btn">6</button>
-                <button class="button operator-button minus-btn">-</button>
-            </section>
-            <section class="row row-4">
-                <button class="button number-button one-btn">1</button>
-                <button class="button number-button two-btn">2</button>
-                <button class="button number-button three-btn">3</button>
-                <button class="button operator-button plus-btn">+</button>
-            </section>
-            <section class="row row-5">
+                <button class="button action-button">←</button>
+                <button class="button operator-button">÷</button>
+            </div>
+            <div class="row">
+                <button class="button number-button">7</button>
+                <button class="button number-button">8</button>
+                <button class="button number-button">9</button>
+                <button class="button operator-button">x</button>
+            </div>
+            <div class="row">
+                <button class="button number-button">4</button>
+                <button class="button number-button">5</button>
+                <button class="button number-button">6</button>
+                <button class="button operator-button">-</button>
+            </div>
+            <div class="row">
+                <button class="button number-button">1</button>
+                <button class="button number-button">2</button>
+                <button class="button number-button">3</button>
+                <button class="button operator-button">+</button>
+            </div>
+            <div class="row">
                 <button class="button number-button zero-btn">0</button>
-                <button class="button action-button equals-btn">=</button>
-            </section>
-        </section>
+                <button class="button action-button">=</button>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
